test/indexOpAssign2.slq

def main(){
	x:=vector(1,0:ğ”¹);
	x[0]âŠ•=x[0]; // error
	return x;
	// // TODO: improve diagnostics
}
